--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@ailibs/feather-react-ts": "^3.0.3",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
-    "tailwind-merge": "^2.1.0"
+    "sonner": "^1.2.4",
+    "tailwind-merge": "^2.1.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/dom-speech-recognition": "^0.0.4",
